# modrinth.py

./: README.md  main.py  pyproject.toml
modrinth/: endpoints.py  facets.py  labrinth.py  types.py
modrinth/http/: abc.py  aiohttp_client.py  errors.py  labrinth_http.py
modrinthpy/: __init__.py  api.py  facets.py  labrinth.py  types.py
modrinthpy/http/: abc.py  errors.py
modrinthpy/http/client/: __init__.py  aiohttp_client.py
