[tool.poetry]
name = "modrinth-py"
version = "0.1.0"
description = ""
authors = ["Coffeemeow <coffeemeowgirl@gmail.com>"]
readme = "README.md"
packages = [{include = "modrinth"}]

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
aiolimiter = "^1.1.0"
aiohttp = "^3.9.5"
dataclass-wizard = "^0.22.3"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
